...
		<TextView
			android:id="@+id/onboardingPage1TextView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/spacing_default"
			android:layout_marginEnd="@dimen/spacing_default"
			android:text="@string/onboarding_page_1_text"
			app:layout_constraintBottom_toTopOf="@id/divider"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_chainStyle="spread_inside" />

		<View
			android:id="@+id/divider"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginTop="@dimen/spacing_default"
			android:layout_marginBottom="@dimen/spacing_default"
			android:background="@drawable/divider"
			app:layout_constraintBottom_toTopOf="@id/onboardingPage1Caption"
			app:layout_constraintTop_toBottomOf="@id/onboardingPage1TextView" />

		<TextView
			android:id="@+id/onboardingPage1Caption"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
...
