...
			android:fontFamily="@font/google_sans_medium"
			android:gravity="center_horizontal"
			android:text="@string/setup_page_3_title"
			android:textSize="@dimen/typography_title" />

		<Spinner
			android:id="@+id/introduction_step_3_device_dropdown"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/introduction_step_3_header_text"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="@dimen/spacing_default" />

...
			android:layout_marginTop="@dimen/spacing_default"
			android:layout_toEndOf="@id/introduction_step_3_device_dropdown"
			android:visibility="gone"
			tools:visibility="visible" />

		<TextView
			android:id="@+id/introduction_step_3_text_block_1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/introduction_step_3_device_dropdown"
			android:layout_marginTop="@dimen/spacing_default"
			android:text="@string/setup_page_3_text"
			android:textColor="?android:textColorSecondary" />
...
