...
			android:layout_marginBottom="@dimen/spacing_half"
			android:checked="true"
			android:text="@string/settings_upload_logs"
			android:textColor="?android:textColorSecondary"
			android:textSize="@dimen/typography_caption"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@id/onboardingPage4StartAppButton"
			app:layout_constraintStart_toStartOf="parent" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/onboardingPage4StartAppButton"
			style="@style/Widget.Material3.Button.OutlinedButton"
			android:layout_width="wrap_content"
...
