<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingStart="@dimen/spacing_default"
	android:paddingTop="@dimen/spacing_default"
	android:paddingEnd="@dimen/spacing_default"
	android:paddingBottom="@dimen/spacing_default">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="@font/google_sans_medium"
			android:text="@string/setup_page_2_title"
			android:textSize="@dimen/typography_title" />

		<TextView
			android:id="@+id/introduction_step_2_text_block_1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/spacing_default"
			android:text="@string/setup_page_2_text"
			android:textColor="?android:textColorSecondary" />
	</LinearLayout>
</ScrollView>
