<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingStart="@dimen/spacing_default"
	android:paddingTop="@dimen/spacing_default"
	android:paddingEnd="@dimen/spacing_default"
	android:paddingBottom="@dimen/spacing_default">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<ImageView
			android:id="@+id/introduction_step_1_image"
			android:layout_width="match_parent"
			android:layout_height="150dp"
			android:layout_gravity="center"
			android:contentDescription="@string/install_guide_image_description"
			android:src="@mipmap/ic_launcher" />

		<TextView
			android:id="@+id/introduction_step_1_header_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="@dimen/spacing_default"
			android:fontFamily="@font/google_sans_medium"
			android:text="@string/setup_page_1_title"
			android:textSize="@dimen/typography_title" />

		<TextView
			android:id="@+id/introduction_step_1_text_block_1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="@dimen/spacing_default"
			android:text="@string/setup_page_1_text"
			android:textColor="?android:textColorSecondary" />
	</LinearLayout>
</ScrollView>
